--- a/workspacer.cabal
+++ b/workspacer.cabal
@@ -57,7 +57,11 @@ executable workspacer
   other-extensions:    DeriveGeneric, OverloadedStrings
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.9 && <4.10, bytestring >=0.10 && <0.11, process >=1.4 && <1.5, optparse-applicative >=0.14 && <0.15
+  build-depends:       base                 >= 4    && < 5,
+                       bytestring           >= 0.10 && < 0.11,
+                       process              >= 1.4  && < 1.5,
+                       optparse-applicative >= 0.13 && < 0.15,
+                       aeson
   
   -- Directories containing source files.
   hs-source-dirs:      src
